Updated Harry Richman

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1359,7 +1359,7 @@
 <p style="text-align: center;">  	Lattice paths and negatively indexed weight-dependent binomial coefficients<br> <span  style="color:white;"> 	Josef Küstner*, Michael Schlosser and Meesue Yoo</span></p>
 <p style="text-align: center;">  	A q-deformation of enriched P-partitions<br> <span  style="color:white;"> 	Darij Grinberg* and Ekaterina Vassilieva</span></p>
 <p style="text-align: center;">  	Growth of unbounded sets in nilpotent groups and random mapping statistics<br> <span  style="color:white;"> 	Beeri Greenfeld and Hagai Lavner*</span></p>
-<p style="text-align: center;">  	Derangements and the p-adic incomplete gamma function<br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman</span></p>
+<p style="text-align: center;">  	Derangements and the p-adic incomplete gamma function<br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman*</span></p>
 <p style="text-align: center;">  	Product-Coproduct Prographs and Triangulations of the Sphere<br> <span  style="color:white;"> 	Nicolas Borie* and Justine Falque</span></p>
 <p style="text-align: center;">  	Combinatorics of fighting fish, planar maps and Tamari intervals<br> <span  style="color:white;"> 	Corentin Henriet* and Enrica Duchi</span></p>
 <p style="text-align: center;">  	Torsors from toggling independent sets<br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough</span></p>
