Corrected some poster presenters

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1386,7 +1386,7 @@
 <p style="text-align: center;"> 	Set Partitions, Tableaux, and Subspace Profiles of Regular Diagonal Operators<br> <span  style="color:white;"> 	Amritanshu Prasad and Samrith Ram*</span></p>
 <p style="text-align: center;"> 	$0$-Hecke-Clifford modules from diagrams<br> <span  style="color:white;"> 	Dominic Searles*</span></p>
 <p style="text-align: center;"> 	Factorization of classical characters twisted by roots of unity: extended abstract<br> <span  style="color:white;"> 	Arvind Ayyer and Nishu Kumari*</span></p>
-<p style="text-align: center;"> 	Rowmotion on fences<br> <span  style="color:white;"> 	Sergi Elizalde, Matthew Plante*, Tom Roby and Bruce Sagan</span></p>
+<p style="text-align: center;"> 	Rowmotion on fences<br> <span  style="color:white;"> 	Sergi Elizalde, Matthew Plante, Tom Roby* and Bruce Sagan</span></p>
 <p style="text-align: center;"> 	Positive Tropical Flags and the Positive Tropical Dressian<br> <span  style="color:white;"> 	Jonathan Boretsky*</span></p>
                         </div>
                         <div class="col-lg-6">       
@@ -1413,13 +1413,13 @@
 <p style="text-align: center;">  	Cluster Duality for Lagrangian and Orthogonal Grassmannians<br> <span  style="color:white;"> 	Charles Wang*</span></p>
 <p style="text-align: center;">  	Deformation cones of hypergraphic polytopes<br> <span  style="color:white;"> 	Arnau Padrol, Vincent Pilaud and Germain Poullot*</span></p>
 <p style="text-align: center;">  	Cyclic Actions in Parking Spaces<br> <span  style="color:white;"> 	Eric Nathan Stucky*</span></p>
-<p style="text-align: center;">  	Lattice paths and negatively indexed weight-dependent binomial coefficients<br> <span  style="color:white;"> 	Josef Küstner*, Michael Schlosser and Meesue Yoo</span></p>
+<p style="text-align: center;">  	Lattice paths and negatively indexed weight-dependent binomial coefficients<br> <span  style="color:white;"> 	Josef Küstner, Michael Schlosser* and Meesue Yoo</span></p>
 <p style="text-align: center;">  	A q-deformation of enriched P-partitions<br> <span  style="color:white;"> 	Darij Grinberg* and Ekaterina Vassilieva</span></p>
 <p style="text-align: center;">  	Growth of unbounded sets in nilpotent groups and random mapping statistics<br> <span  style="color:white;"> 	Beeri Greenfeld and Hagai Lavner*</span></p>
 <p style="text-align: center;">  	Derangements and the p-adic incomplete gamma function<br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman*</span></p>
 <p style="text-align: center;">  	Product-Coproduct Prographs and Triangulations of the Sphere<br> <span  style="color:white;"> 	Nicolas Borie* and Justine Falque</span></p>
 <p style="text-align: center;">  	Combinatorics of fighting fish, planar maps and Tamari intervals<br> <span  style="color:white;"> 	Corentin Henriet* and Enrica Duchi</span></p>
-<p style="text-align: center;">  	Torsors from toggling independent sets<br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough</span></p>
+<p style="text-align: center;">  	Torsors from toggling independent sets<br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough*</span></p>
 
                         </div>
                     </div>
