Fixed broken links

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -613,7 +613,7 @@
         
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="assets/img/banner2.jpg" target="_blank">
+            <a href="assets/img/banner2.jpeg" target="_blank">
               <img src="assets/img/banner2.jpeg" alt="Banner 2" height="200" style="padding-left:50px;">
               <div class="caption">
                 <p style="font-size:small; text-align: center;">Banner close</p>
@@ -624,7 +624,7 @@
 
         <div class="col-md-4">
           <div class="thumbnail">
-            <a href="assets/img/banner3.jpg" target="_blank">
+            <a href="assets/img/banner3.jpeg" target="_blank">
               <img src="assets/img/banner3.jpeg" alt="Banner 3" height="200" style="padding-left:50px;">
               <div class="caption">
                 <p style="font-size:small; text-align: center;">Banner very close</p>
