--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1465,7 +1465,7 @@
 
         </div>
         <div class="row justify-content-center">
-                <div class="col-lg-8 border-right">
+                <div class="col-lg-8">
                     <div class="row">
                         <div class="col">
                             <h2 style="text-align: center;">Software submissions</h2>
