--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -23,23 +23,72 @@ css: "datta-fest"
                     href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Thursday, 28 July,
                 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
                     target="_blank">Prof. Basudeb Datta</a>.</p>
-
+            <p>All lectures will be in hybrid mode, with some delivered in person and streamed online and others
+                streamed to the venue as well as online.</p>
             <p>
                 This is part of a three-day symposium on the occasion of superannuation of three of our faculty members.
             </p>
-            <h2>Invited Speakers</h2>
-            <ul>
-                <li>Bhaskar Bagchi (ISI, Bangalore)</li>
-                <li>Benjamin Burton (University of Queensland, Australia)</li>
-                <li>Satoshi Murai (Waseda University, Japan)</li>
-                <li>Soumen Sarkar (IIT, Madras)</li>
-                <li>Jonathan Spreer (University of Sydney, Australia)</li>
-            </ul>
-	    <h2>Schedule</h2>
-            <ul>
-                <li>To be announced later</li>
-            </ul>
+
         </div>
         <div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
+    </div>
+    <div class="row pt-5">
+        <div class="col-md-12">
+            <div class="text-center">
+                <h2 class="text-center">Schedule of Lectures</h2>
+            </div>
+            <div class="row pt-3">
+
+
+                <table class="table table-striped table-bordered table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">Time</th>
+                            <th scope="col">Speaker</th>
+                            <th scope="col">Title</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>09:30 am - 10:15 am</td>
+                            <td>Bhaskar Bagchi (ISI, Bangalore) </td>
+                            <td>to be announced</td>
+                        </tr>
+                        <tr>
+                            <td>10:20 am - 11:05 am (online)</td>
+                            <td>Benjamin Burton (University of Queensland, Australia)</td>
+                            <td>to be announced</td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>                            
+                        </tr>
+                        <tr>
+                            <td>11:30 am - 12:15 pm (online)</td>
+                            <td>Satoshi Murai (Waseda University, Japan)</td>
+                            <td>to be announced</td>
+                        </tr>
+                        <tr>
+                            <td>12:20 pm - 1:05 pm</td>
+                            <td>Soumen Sarkar (IIT, Madras)</td>
+                            <td>to be announced</td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> LUNCH </td>                            
+                        </tr>
+                        <tr>
+                            <td>2:45 pm - 3:30 pm</td>
+                            <td>Jonathan Spreer (University of Sydney, Australia)</td>
+                            <td>to be announced</td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>                            
+                        </tr>
+                        <tr>
+                            <td>4:00 pm onwards</td>
+                            <span class="text-center"><td class="lead" colspan="2">Reminiscences</td></span>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
