--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1464,19 +1464,13 @@
 
 
         </div>
-        <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col">
-                            <h2 style="text-align: center;">Software submissions</h2>
-                            <hr class="divider my-4" />
-                        </div>
-                    </div>
-                    <div class="row">
-<p style="text-align: center;">Computing Galois groups of Ehrhart polynomials in OSCAR<br> <span  style="color:white;">Claus Fieker, Tommy Hofmann* and Michael Joswig</span></p>
-                        </div>
-                    </div>
-               </div>
+
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <h2 style="text-align: center;">Software submissions</h2>
+            <hr class="divider my-4" />
+ 				<p style="text-align: center;">Computing Galois groups of Ehrhart polynomials in OSCAR<br> 
+ 				<span  style="color:white;">Claus Fieker, Tommy Hofmann* and Michael Joswig</span></p>
         </div>
     </div>
 		
