--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -34,9 +34,7 @@ css: "datta-fest"
     </div>
     <div class="row pt-5">
         <div class="col-md-12">
-            <div class="text-center">
-                <h2 class="text-center">Schedule of Lectures</h2>
-            </div>
+            <h2 class="text-center">Schedule of Lectures</h2>
             <div class="row pt-3">
 
 
@@ -50,44 +48,86 @@ css: "datta-fest"
                     </thead>
                     <tbody>
                         <tr>
-                            <td>09:30 am - 10:15 am</td>
+                            <td>09:30 am &ndash; 10:15 am</td>
                             <td>Bhaskar Bagchi (ISI, Bangalore) </td>
-                            <td>to be announced</td>
+                            <td><a href="#bagchi">The uniqueness conjecture</a></td>
                         </tr>
                         <tr>
-                            <td>10:20 am - 11:05 am (online)</td>
+                            <td>10:20 am &ndash; 11:05 am (online)</td>
                             <td>Benjamin Burton (University of Queensland, Australia)</td>
                             <td>to be announced</td>
                         </tr>
                         <tr class="text-center">
-                            <td class="gold" colspan="3"> COFFEE BREAK </td>                            
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>
                         </tr>
                         <tr>
-                            <td>11:30 am - 12:15 pm (online)</td>
+                            <td>11:30 am &ndash; 12:15 pm (online)</td>
                             <td>Satoshi Murai (Waseda University, Japan)</td>
                             <td>to be announced</td>
                         </tr>
                         <tr>
-                            <td>12:20 pm - 1:05 pm</td>
+                            <td>12:20 pm &ndash; 1:05 pm</td>
                             <td>Soumen Sarkar (IIT, Madras)</td>
                             <td>to be announced</td>
                         </tr>
                         <tr class="text-center">
-                            <td class="gold" colspan="3"> LUNCH </td>                            
+                            <td class="gold" colspan="3"> LUNCH </td>
                         </tr>
                         <tr>
-                            <td>2:45 pm - 3:30 pm</td>
+                            <td>2:45 pm &ndash; 3:30 pm</td>
                             <td>Jonathan Spreer (University of Sydney, Australia)</td>
                             <td>to be announced</td>
                         </tr>
                         <tr class="text-center">
-                            <td class="gold" colspan="3"> COFFEE BREAK </td>                            
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>
                         </tr>
                         <tr>
                             <td>4:00 pm onwards</td>
-                            <span class="text-center"><td class="lead" colspan="2">Reminiscences</td></span>
+                            <span class="text-center">
+                                <td class="lead" colspan="2">Reminiscences</td>
+                            </span>
                     </tbody>
                 </table>
+            </div>
+
+            <div>
+            <h2 class="text-center pt-5">Titles and abstracts</h2>
+            <div class="pt-3" id="bagchi">
+                <h5><strong>Speaker:</strong> Bhaskar Bagchi</h5>
+                <h5><strong>Title:</strong> The uniqueness conjecture</h5>
+                <h5><strong>Time:</strong> 09:30 am &ndash; 10:15 am </h5>
+                <p>
+                    <strong>Abstract:</strong> We shall discuss one of the most famous problems in Combinatorics; the folklore conjecture that for
+                    each prime number p, there is a unique projective plane of order p. The focus will be on the
+                    coding theoretic approach to this problem. </p>
+            </div>
+            <div class="pt-3" id="burton">
+                <h5><strong>Speaker:</strong> Benjamin Burton </h5>
+                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Time:</strong> 10:20 am &ndash; 11:05 am (online) </h5>
+                <p>
+                    <strong>Abstract:</strong>  </p>
+            </div>
+            <div class="pt-3" id="murai">
+                <h5><strong>Speaker:</strong> Satoshi Murai </h5>
+                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Time:</strong> 11:30 am &ndash; 12:15 pm (online) </h5>
+                <p>
+                    <strong>Abstract:</strong>  </p>
+            </div>
+            <div class="pt-3" id="sarkar">
+                <h5><strong>Speaker:</strong> Soumen Sarkar </h5>
+                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Time:</strong> 12:20 pm &ndash; 1:05 pm </h5>
+                <p>
+                    <strong>Abstract:</strong>  </p>
+            </div>
+            <div class="pt-3" id="speer">
+                <h5><strong>Speaker:</strong> Jonathan Spreer</h5>
+                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Time:</strong> 2:45 pm &ndash; 3:35 pm </h5>
+                <p>
+                    <strong>Abstract:</strong>  </p>
             </div>
         </div>
     </div>
