--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -530,12 +530,6 @@
                 <div class="col-lg-10 text-center">
                     <h2 style="text-align: center;">Local information</h2>
                     <hr class="divider my-4" />
-                    <p style="text-align: left;"><b>We encourage everyone to come to Bangalore for FPSAC in July 2022, 
-			    and we sincerely hope that everyone will do so. However, given the pandemic, it seems  
-			    likely that some people may be unable or unwilling to travel this summer. Therefore we have 
-			    decided to make this a hybrid conference, streaming all presentations in addition to 
-			    (hopefully!) hosting them live on-site. As the conference date approaches, we will refine 
-			    or adjust these details as necessary.</b></p>
                     </div>
             </div>
         </div>
@@ -713,6 +707,15 @@
 		Green Path Eco Hotel</a> at <a href="https://g.page/hotel-mint-green-path?share" target="_blank">walking distance</a> from the 
 		IISc campus. The special rate for the conference is INR 2000 for a single room and INR 2500 for a double room per night, plus 
 		tax. Contact rashmi at thegreenpath dot in for booking and mention that you are a participant at FPSAC to get the discounted rate.</p>
+		    
+              <p style="text-align: left;">We have also reserved 10 rooms at the 5-star 
+              <a href="https://g.page/sheratongrandbangalore?share" target="_blank">Sheraton Grand Bangalore Hotel</a> at Brigade Gateway. To avail the special rate for the conference 
+              (INR 7500 for a single room and INR 8000 for a double room per night, plus tax), click on
+              <a href="https://www.marriott.com/events/start.mi?id=1655985222518&key=GRP" target="_blank">this link</a>.
+              Contact ashwin dot srivastava at sheraton dot com if you face any issues while booking. <br>
+              <b>Caveat</b>: To avail this rate, more than 5 rooms need to be booked using the above link. If that does not happen, you will have to pay the regular rate. <br>
+              We will try to arrange daily transportation for participants from the hotel to the venue.   
+				  </p>
 		    
                 <p style="text-align: left; color: #ff9900;"><strong>Hotel Booking Spam Alert!</strong> 
                 Please do not respond to spam emails or messages about hotels in Bangalore. 
