dattafest registration etc

--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -26,14 +26,18 @@ css: "datta-fest"
             <p>All lectures will be in hybrid mode, with some delivered in person and streamed online and others
                 streamed to the venue as well as online.</p>
             <p>
-                This is part of a three-day symposium on the occasion of superannuation of three of our faculty members.
+                This is part of a <a href="{{ site.baseurl }}/events/2022-07-25-supersymposium.html">three-day symposium</a> on the occasion of superannuation of three of our faculty members.
             </p>
+            <p class="lead">
+                If you wish to attend either in-person or online, please <a href="#register">register</a>  by <strong>July 15, 2022</strong>.
+            </p>
+
 
         </div>
         <div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
     </div>
     <div class="row pt-5">
-        <div class="col-md-12">
+        <div class="col-md-12" id="schedule">
             <h2 class="text-center">Schedule of Lectures</h2>
             <div class="row pt-3">
 
@@ -50,7 +54,7 @@ css: "datta-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:15 am</td>
                             <td>Bhaskar Bagchi (ISI, Bangalore) </td>
-                            <td><a href="#bagchi">The uniqueness conjecture</a></td>
+                            <td><a href="./titles#bagchi">The uniqueness conjecture</a></td>
                         </tr>
                         <tr>
                             <td>10:20 am &ndash; 11:05 am (online)</td>
@@ -90,45 +94,10 @@ css: "datta-fest"
                 </table>
             </div>
 
-            <div>
-            <h2 class="text-center pt-5">Titles and abstracts</h2>
-            <div class="pt-3" id="bagchi">
-                <h5><strong>Speaker:</strong> Bhaskar Bagchi</h5>
-                <h5><strong>Title:</strong> The uniqueness conjecture</h5>
-                <h5><strong>Time:</strong> 09:30 am &ndash; 10:15 am </h5>
-                <p>
-                    <strong>Abstract:</strong> We shall discuss one of the most famous problems in Combinatorics; the folklore conjecture that for
-                    each prime number p, there is a unique projective plane of order p. The focus will be on the
-                    coding theoretic approach to this problem. </p>
-            </div>
-            <div class="pt-3" id="burton">
-                <h5><strong>Speaker:</strong> Benjamin Burton </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
-                <h5><strong>Time:</strong> 10:20 am &ndash; 11:05 am (online) </h5>
-                <p>
-                    <strong>Abstract:</strong>  </p>
-            </div>
-            <div class="pt-3" id="murai">
-                <h5><strong>Speaker:</strong> Satoshi Murai </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
-                <h5><strong>Time:</strong> 11:30 am &ndash; 12:15 pm (online) </h5>
-                <p>
-                    <strong>Abstract:</strong>  </p>
-            </div>
-            <div class="pt-3" id="sarkar">
-                <h5><strong>Speaker:</strong> Soumen Sarkar </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
-                <h5><strong>Time:</strong> 12:20 pm &ndash; 1:05 pm </h5>
-                <p>
-                    <strong>Abstract:</strong>  </p>
-            </div>
-            <div class="pt-3" id="speer">
-                <h5><strong>Speaker:</strong> Jonathan Spreer</h5>
-                <h5><strong>Title:</strong> to be announced </h5>
-                <h5><strong>Time:</strong> 2:45 pm &ndash; 3:35 pm </h5>
-                <p>
-                    <strong>Abstract:</strong>  </p>
-            </div>
+        <div id="register" class="pt-3">
+            <h2 class="text-center">Registration</h2>
+            <p class="lead">The registration process is for all <a href="{{ site.baseurl }}/events/2022-07-25-supersymposium.html">three symposiums</a>. Please register by <strong>July 15, 2022</strong> if you wish to attend either in-person or online . </p>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfHD3YM7xlMIlEEXg9U-iNNSRlZO46RJByt6Ul4bSTzimKV3Q/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </div>
 </div>
