--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -54,7 +54,7 @@ css: "datta-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:15 am</td>
                             <td>Bhaskar Bagchi (ISI, Bangalore) </td>
-                            <td><a href="./titles#bagchi">The uniqueness conjecture</a></td>
+                            <td><a href="./titles.html#bagchi">The uniqueness conjecture</a></td>
                         </tr>
                         <tr>
                             <td>10:20 am &ndash; 11:05 am (online)</td>
