--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -42,4 +42,11 @@ css: "thangavelu-fest"
         </div>
         <div class="col-md-4"><img src="thangavelu.jpg" width="100%" /></div>
     </div>
+  <div class="row">
+    <div id="register" class="pt-3">
+        <h2 class="text-center">Registration</h2>
+        <p class="lead">The registration process is for all <a href="{{ site.baseurl }}/events/2022-07-25-supersymposium.html">three symposiums</a>. Please register by <strong>July 15, 2022</strong> if you wish to attend either in-person or online. If you are at IISc, please also join the Microsoft Teams <a href="https://teams.microsoft.com/l/team/19%3azU0CpWgAnzFuwhSCTC3znTwyYNt9P4nJom2eui3G2BQ1%40thread.tacv2/conversations?groupId=2dec8ad3-57f3-4e3a-ab4f-cf2d34385256&tenantId=6f15cd97-f6a7-41e3-b2c5-ad4193976476">Team</a>.</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfHD3YM7xlMIlEEXg9U-iNNSRlZO46RJByt6Ul4bSTzimKV3Q/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+  </div>  
 </div>
