satoshi murai title

--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -54,7 +54,7 @@ css: "datta-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:15 am</td>
                             <td>Bhaskar Bagchi (ISI, Bangalore) </td>
-                            <td><a href="./titles.html#bagchi">The uniqueness conjecture</a></td>
+                            <td><a href="titles.html#bagchi">The uniqueness conjecture</a></td>
                         </tr>
                         <tr>
                             <td>10:20 am &ndash; 11:05 am (online)</td>
@@ -67,7 +67,7 @@ css: "datta-fest"
                         <tr>
                             <td>11:30 am &ndash; 12:15 pm (online)</td>
                             <td>Satoshi Murai (Waseda University, Japan)</td>
-                            <td>to be announced</td>
+                            <td><a href="titles.html#murai">Stackedness, tightness, and commutative algebra</a></td>
                         </tr>
                         <tr>
                             <td>12:20 pm &ndash; 1:05 pm</td>
