--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -36,10 +36,15 @@ css: "datta-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="murai">
                 <h5><strong>Speaker:</strong> Satoshi Murai </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Title:</strong> Stackedness, tightness, and commutative algebra </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:30 am &ndash; 12:15 pm</a> (online) </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> Stackedness and tightness are attractive properties of triangulated
+                    manifolds, which Basudeb has a lot of contributions to them. These
+                    properties are defined from combinatorial and topological point of view,
+                    but they actually have a nice connection to commutative algebra theory.
+                    In this talk, I will talk how Basudeb's works on stacked and tight
+                    triangulations connect to commutative algebra theory. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="sarkar">
