--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -24,24 +24,71 @@ css: "thangavelu-fest"
                 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~veluma/"
                     target="_blank">Prof. S. Thangavelu</a>.</p>
 
+        <p>All lectures will be in hybrid mode, with some delivered in person and streamed online and others
+                streamed to the venue as well as online.</p>
             <p>
-                This is part of a three-day symposium on the occasion of superannuation of three of our faculty members.
+                This is part of a <a href="{{ site.baseurl }}/events/2022-07-25-supersymposium.html">three-day symposium</a> on the occasion of superannuation of three of our faculty members.
             </p>
-            <h2>Invited Speakers</h2>
-            <ul>
-                <li>Bernhard Krotz (University of Paderborn, Germany)</li>
-                <li> Jotsaroop Kaur (IISER Mohali) </li>
-                <li> Rahul Garg (IISER Bhopal)</li>
-                <li> Pritam Ganguly (IISc)</li>
-            </ul>
-	    <h2>Schedule</h2>
-            <ul>
-                <li>To be announced later</li>
-            </ul>
-
-        </div>
+            <p class="lead">
+                If you wish to attend either in-person or online, please <a href="#register">register</a>  by <strong>July 15, 2022</strong>. Links for the lectures will be sent to the registered participants. If you are at IISc, please also join the Microsoft Teams <a href="https://teams.microsoft.com/l/team/19%3azU0CpWgAnzFuwhSCTC3znTwyYNt9P4nJom2eui3G2BQ1%40thread.tacv2/conversations?groupId=2dec8ad3-57f3-4e3a-ab4f-cf2d34385256&tenantId=6f15cd97-f6a7-41e3-b2c5-ad4193976476">Team</a>.
+            </p>
+</div>
         <div class="col-md-4"><img src="thangavelu.jpg" width="100%" /></div>
     </div>
+<div class="row pt-5">
+        <div class="col-md-12" id="schedule">
+            <h2 class="text-center">Schedule of Lectures</h2>
+            <div class="row pt-3">
+
+
+                <table class="table table-striped table-bordered table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">Time</th>
+                            <th scope="col">Speaker</th>
+                            <th scope="col">Title</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>09:30 am &ndash; 10:30 am</td>
+                            <td>Jotsaroop Kaur (IISER Mohali)</td>
+			    <td><a href="titles.html#Kaur">to be announced</a></td>
+                        </tr>
+                        </tr>
+			<tr class="text-center">
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>
+                        </tr>
+                        <tr>
+                            <td>11:00 am &ndash; 12:00 pm </td>
+                            <td>Pritam Ganguly (IISc)</td>
+			    <td><a href="titles.html#Pritam">to be announced</a></td>
+                        </tr>
+                        <tr>
+                            <td>12:00 pm &ndash; 1:00 pm</td>
+                            <td>Bernhard Krotz (University of Paderborn, Germany)</td>
+			    <td><a href="titles.html#Krotz">to be announced</a></td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> LUNCH </td>
+                        </tr>
+                        <tr>
+                            <td>2:30 pm &ndash; 3:30 pm</td>
+			    <td>Rahul Garg (IISER Bhopal)</td>
+			    <td><a href="titles.html#Garg">to be announced</a></td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> COFFEE BREAK </td>
+                        </tr>
+                        <tr>
+                            <td>4:00 pm onwards</td>
+                            <span class="text-center">
+                                <td class="lead" colspan="2">Reminiscences</td>
+                            </span>
+                    </tbody>
+                </table>
+            </div>
+
   <div class="row">
     <div id="register" class="pt-3">
         <h2 class="text-center">Registration</h2>
