Added title and Abstract for mkgfest and thangavelufest

--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -34,10 +34,10 @@ css: "mkg-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Borkar">
                 <h5><strong>Speaker:</strong> Vivek Borkar </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong>  In search of Markov solutions</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:20 am &ndash; 12:00 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong>  The problem of selecting a Markov family of solutions for ill-posed stochastic differential equations is revisited, and issues with the resolution thereof by Krylov are pointed out. An alternative approach in the spirit of Kolmogorov's philosophy based on 'small noise limits' was proposed in an earlier work with K. Suresh Kumar. This talk, after sketching the background in some detail, will present improved results with A. Sumith Reddy, where a unique Feller selection is possible under certain technical conditions. The approach uses  viscosity solutions of the associated backward Kolmogorov equation, whose well-posedness is established as a part of this work.</p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Biswas">
