--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -62,7 +62,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>11:00 am &ndash; 12:00 pm </td>
                             <td>Pritam Ganguly (IISc)</td>
-			    <td><a href="titles.html#Pritam">to be announced</a></td>
+			    <td><a href="titles.html#Pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
                         </tr>
                         <tr>
                             <td>12:00 pm &ndash; 1:00 pm</td>
