--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -26,10 +26,10 @@ css: "thangavelu-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Ganguly">
                 <h5><strong>Speaker:</strong> Pritam Ganguly </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong>  Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:00 am &ndash; 12:00 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> In this talk, by bringing out the connection between Hermite and Ornstein-Uhlenbeck operators, we plan to discuss Hardy-type inequalities for the fractional powers of these operators. As part of our strategy, we study an extension problem associated with the Ornstein-Uhlenbeck operator. Additionally, we provide several characterizations of the solutions to the extension problem. This is based on joint work with R. Manna and S. Thangavelu. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Krotz">
