--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -66,7 +66,7 @@ css: "mkg-fest"
                         <tr>
                             <td>11:20 am &ndash; 12:00 pm </td>
                             <td>Vivek Borkar (IIT-B)</td>
-			    <td><a href="titles.html#Borkar">to be announced</a></td>
+			    <td><a href="titles.html#Borkar">In search of Markov solutions</a></td>
 			</tr>
                         <tr>
                             <td>12:00 pm &ndash; 12:40 pm</td>
