jonathan spreer talk

--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -80,7 +80,7 @@ css: "datta-fest"
                         <tr>
                             <td>2:45 pm &ndash; 3:30 pm</td>
                             <td>Jonathan Spreer (University of Sydney, Australia)</td>
-                            <td>to be announced</td>
+                            <td><a href="titles.html#spreer">An algorithm to compute the crosscap number of a knot</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
