--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -55,12 +55,17 @@ css: "datta-fest"
                     <strong>Abstract:</strong>  </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="speer">
+            <div class="border-bottom border-secondary" id="spreer">
                 <h5><strong>Speaker:</strong> Jonathan Spreer</h5>
-                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Title:</strong> An algorithm to compute the crosscap number of a knot </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:45 pm &ndash; 3:35 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong>  
+                    The crosscap number of a knot is the non-orientable counterpart of its genus. It is defined as the minimum of one minus the Euler characteristic of S, taken over all non-orientable surfaces S bounding the knot. Computing the crosscap number of a knot is tricky, since normal surface theory - the usual tool to prove computability of problems in 3-manifold topology, does not deliver the answer "out-of-the-box".</p>
+
+                    <p>In this talk, I will review the strengths and weaknesses of normal surface theory, focusing on why we need to work to obtain an algorithm to compute the crosscap number. I will then explain the theorem stating that an algorithm due to Burton and Ozlen can be used to give us the answer.</p>
+                    
+                    <p>This is joint with work with Jaco, Rubinstein, and Tillmann.</p>
             </div>
         </div>
     </div>
